# ewgpu

./: Cargo.toml  LICENSE  LICENSE.MIT  README.md  binding.rs  buffer.rs  mod.rs  pipeline.rs  uniform.rs  vert.rs
examples/wireframe/: Cargo.toml
examples/wireframe/src/: camera.rs  main.rs  wireframe.rs  wireframe_ppl.rs
examples/wireframe/src/shaders/: line_ppl.glsl  wf_mesh_rppl.glsl
macros/: Cargo.toml
macros/src/: bind_group_content.rs  compute_data.rs  deref.rs  lib.rs  pipeline_layout.rs  push_constant.rs  render.rs  render_data.rs  utils.rs  vertex.rs
src/: binding.rs  buffer.rs  builders.rs  drawable.rs  framework.rs  gpu_context.rs  imgui_context.rs  lib.rs  mesh.rs  pipeline.rs  push_constants.rs  render_data.rs  render_target.rs  resources.rs  shader.rs  texture.rs  uniform.rs  utils.rs  vert.rs  winit_context.rs
src/context/: egui_context.rs  gpu_context.rs  imgui_context.rs  mod.rs  winit_context.rs
src/pipelines/: blit.wgsl  mipmap.rs  mod.rs
tests/: push_constants.rs
