[package]
name = "wgpu_utils"
version = "0.1.0"
edition = "2021"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = {version = "0.12", features = ["glsl", "spirv"]}
raw-window-handle = "0.4.2"
pollster = "0.2"
bytemuck = {version = "1.4", features = ["derive"]}
anyhow = "1.0"
more-asserts = "*"
#nalgebra-glm = "*"
#nalgebra = "*"
naga = "*"
shaderc = "*"
imgui = "*"
imgui-wgpu = "*"
imgui-winit-support = {version = "*", default-features = false, features = ["winit-26"]}

wgpu_utils_macros = {path = "macros"}


[[example]]
name = "wireframe"
test = true
