[package]
name = "ewgpu"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "An easy wrapper for WGPU."
license = "MIT"
license-file = "./LICENSE.MIT"
readme = "README.md"
repository = "https://github.com/DoeringChristian/ewgpu/"

[workspace]
members = [
".", "./macros",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = {version = "0.12", features = ["glsl", "spirv"]}
raw-window-handle = "0.4.2"
pollster = "0.2"
bytemuck = {version = "1.4", features = ["derive"]}
anyhow = "1.0"
more-asserts = "0.2.2"
#nalgebra-glm = "*"
#nalgebra = "*"
naga = "0.8.5"
shaderc = "0.7.4"
imgui = "0.8.2"
imgui-wgpu = "0.19.0"
imgui-winit-support = {version = "0.8.2", default-features = false, features = ["winit-26"]}
num-traits = "0.2.14"

ewgpu_macros = {version = "0.1.0", path = "./macros"}

