[package]
name = "ewgpu"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "An easy wrapper for WGPU."
license = "MIT"
license-file = "./LICENSE.MIT"
readme = "README.md"
repository = "https://github.com/DoeringChristian/ewgpu/"

[workspace]
members = [
".", "./macros", "./examples/wireframe"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = {version = "0.12", features = ["glsl", "spirv"]}
raw-window-handle = "0.4.2"
fxhash = "0.2"
pollster = "0.2"
bytemuck = {version = "1.4", features = ["derive"]}
anyhow = "1.0"
more-asserts = "0.2.2"
#nalgebra-glm = "*"
#nalgebra = "*"
naga = "0.8.5"
shaderc = "0.7.4"
imgui = {version = "0.8.2", optional = true}
imgui-wgpu = {version = "0.19.0", optional = true}
imgui-winit-support = {version = "0.8.2", optional = true, default-features = false, features = ["winit-26"]}
num-traits = "0.2.14"
crevice = "0.8.0"

epi = {version = "0.16", optional = true}
egui = {version = "0.16", optional = true}
egui_wgpu_backend = {version = "0.16", optional = true}
egui_winit_platform = {version = "0.13", optional = true}

ewgpu_macros = {version = "0.1.0", path = "./macros"}

[features]
default = ["imgui"]
imgui = ["dep:imgui", "dep:imgui-wgpu", "dep:imgui-winit-support"]
egui = ["dep:epi", "dep:egui", "dep:egui_wgpu_backend", "dep:egui_winit_platform"]

