[package]
name = "ewgpu_macros"
version = "0.1.0"
edition = "2021"
description = "Derive macros for ewgpu."
license = "MIT"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
